--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -5,11 +5,9 @@
             <div class="form-group col-lg-3">
                 <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
                     <mat-label class="customMatLabel">Year</mat-label>
-                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
-                                required>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel" required>
 
-                        <mat-option *ngFor="let single_year of years;let i=index"
-                                    [value]="single_year">{{single_year}}</mat-option>
+                        <mat-option *ngFor="let single_year of years;let i=index" [value]="single_year">{{single_year}}</mat-option>
                     </mat-select>
                 </mat-form-field>
                 <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
@@ -17,8 +15,7 @@
                 </div>
             </div>
             <div class="form-group col-lg-3">
-                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
-                        (click)="getData()">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button (click)="getData()">
                     <mat-icon class="mr-2">search</mat-icon>
                     Search
                 </button>
@@ -36,32 +33,19 @@
         <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartPerformanceIndicators" class=" mt-0 py-3">
-                            <apx-chart [series]="chartPerformanceIndicators?.series"
-                                       [chart]="chartPerformanceIndicators?.chart"
-                                       [labels]="chartPerformanceIndicators?.labels"
-                                       [title]="chartPerformanceIndicators?.title"
-                                       [theme]="chartPerformanceIndicators?.theme"
-                                       [responsive]="chartPerformanceIndicators?.responsive"
-                                       [noData]="chartPerformanceIndicators.noData"
-                                       [colors]="chartPerformanceIndicators?.colors"
-                            >
+                            <apx-chart [series]="chartPerformanceIndicators?.series" [chart]="chartPerformanceIndicators?.chart" [labels]="chartPerformanceIndicators?.labels" [title]="chartPerformanceIndicators?.title" [theme]="chartPerformanceIndicators?.theme" [responsive]="chartPerformanceIndicators?.responsive"
+                                [noData]="chartPerformanceIndicators.noData" [colors]="chartPerformanceIndicators?.colors">
                             </apx-chart>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-lg-6">
-                    <div class="shadow-sm border graph-box"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartLoanPortfolio" class=" mt-0 py-3">
-                            <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart"
-                                       [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title"
-                                       [theme]="chartLoanPortfolio?.theme"
-                                       [responsive]="chartLoanPortfolio?.responsive"
-                                       [noData]="chartLoanPortfolio.noData"
-
-                            ></apx-chart>
+                            <apx-chart [series]="chartLoanPortfolio?.series" [chart]="chartLoanPortfolio?.chart" [labels]="chartLoanPortfolio?.labels" [title]="chartLoanPortfolio?.title" [theme]="chartLoanPortfolio?.theme" [responsive]="chartLoanPortfolio?.responsive" [noData]="chartLoanPortfolio.noData"></apx-chart>
                         </div>
                     </div>
 
@@ -70,20 +54,14 @@
             </div>
             <div class="row">
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border graph-box"style="height: 365px;" >
+                    <div class="shadow-sm border graph-box" style="height: 365px;">
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
-                            <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
-                                       [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
-                                       [theme]="chartnoOfBorrowers?.theme"
-                                       [responsive]="chartnoOfBorrowers?.responsive"
-                                       [noData]="chartnoOfBorrowers?.noData"
-
-                            ></apx-chart>
+                            <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart" [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title" [theme]="chartnoOfBorrowers?.theme" [responsive]="chartnoOfBorrowers?.responsive" [noData]="chartnoOfBorrowers?.noData"></apx-chart>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" style="height: 365px;" >
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" style="height: 365px;">
                         <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                         <app-pyramid-chart [item]="CreditCeiling">
                         </app-pyramid-chart>
@@ -106,39 +84,39 @@
                           </thead> -->
 
                         <tbody>
-                      
-                        <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+
+                            <tr *ngFor="let items of DisbursmentAchievement" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
                                     </div>
-                                    <div class="fw-bold">
-                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[1],1)}}
+                                        </div>
                                     </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                        {{dashboardService.getCamelCaseString(items[1],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[1],1)}}
-                                     </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                        {{dashboardService.getCamelCaseString(items[2],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[2],1)}}
-                                     </div>
-                                </div>
-                            </td>
-                        </tr>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[2],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -157,38 +135,38 @@
                           </thead> -->
 
                         <tbody>
-                        <tr *ngFor="let items of RecoveryAchievement" class="text-center">
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                       {{dashboardService.getCamelCaseString(items[0],0)}}
+                            <tr *ngFor="let items of RecoveryAchievement" class="text-center">
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[0],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[0],1)}}
+                                        </div>
                                     </div>
-                                    <div class="fw-bold">
-                                        {{dashboardService.getCamelCaseString(items[0],1)}}
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[1],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[1],1)}}
+                                        </div>
                                     </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                        {{dashboardService.getCamelCaseString(items[1],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[1],1)}}
-                                     </div>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="d-grid">
-                                    <div>
-                                        {{dashboardService.getCamelCaseString(items[2],0)}}
-                                     </div>
-                                     <div class="fw-bold">
-                                         {{dashboardService.getCamelCaseString(items[2],1)}}
-                                     </div>
-                                </div>
-                            </td>
-                        </tr>
+                                </td>
+                                <td>
+                                    <div class="d-grid">
+                                        <div>
+                                            {{dashboardService.getCamelCaseString(items[2],0)}}
+                                        </div>
+                                        <div class="fw-bold">
+                                            {{dashboardService.getCamelCaseString(items[2],1)}}
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -199,27 +177,31 @@
                     <p class="heading mb-2 text-lg">Branch Position</p>
                     <table class="table table-striped">
                         <thead>
-                        <tr class="table-header-background">
-                            <th>Branch</th>
-                            <th>Disbursement</th>
-                            <th>Recovery</th>
-                            <th>NPL</th>
-                            <th>SAM</th>
-                            <th>Outstanding</th>
-                            <th>Audit Paras</th>
+                            <tr class="table-header-background">
+                                <th>Branch</th>
+                                <th>Disbursement</th>
+                                <th>Recovery</th>
+                                <th>NPL</th>
+                                <th>SAM</th>
+                                <th>Outstanding</th>
+                                <th>Audit Paras</th>
+                                <th>Utilization</th>
+                                <th>Mutation</th>
 
-                        </tr>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr *ngFor="let item of CirclePositions">
-                            <td>{{item?.Name}}</td>
-                            <td>{{item?.TotalDisbursment}}</td>
-                            <td>{{item?.TotalRecovery}}</td>
-                            <td>{{item?.NplOS}}</td>
-                            <td>{{item?.SamOS}}</td>
-                            <td>{{item?.TotalOS}}</td>
-                            <td>{{item?.AuditParas}}</td>
-                        </tr>
+                            <tr *ngFor="let item of CirclePositions">
+                                <td>{{item?.Name}}</td>
+                                <td>{{item?.TotalDisbursment}}</td>
+                                <td>{{item?.TotalRecovery}}</td>
+                                <td>{{item?.NplOS}}</td>
+                                <td>{{item?.SamOS}}</td>
+                                <td>{{item?.TotalOS}}</td>
+                                <td>{{item?.AuditParas}}</td>
+                                <td>{{item?.Utilizations}}</td>
+                                <td>{{item?.Mutations}}</td>
+                            </tr>
                         </tbody>
 
                     </table>
