--- a/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-credit-dashboard/evp-credit-dashboard.component.html
@@ -41,7 +41,9 @@
                             <apx-chart [series]="chartOptions1?.series" [chart]="chartOptions1?.chart"
                                        [labels]="chartOptions1?.labels" [title]="chartOptions1?.title"
                                        [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"
-                                       [noData]="chartOptions1.noData"></apx-chart>
+                                       [noData]="chartOptions1.noData"
+                                       [colors]="chartOptions1?.colors"
+                            ></apx-chart>
                         </div>
                     </div>
 
@@ -52,7 +54,9 @@
                             <apx-chart [series]="chartOptions2?.series" [chart]="chartOptions2?.chart"
                                        [labels]="chartOptions2?.labels" [title]="chartOptions2?.title"
                                        [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"
-                                       [noData]="chartOptions2.noData"></apx-chart>
+                                       [noData]="chartOptions2.noData"
+                                       [colors]="chartOptions2?.colors"
+                            ></apx-chart>
                         </div>
                     </div>
 
