Recovery Sam Division

--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -65,8 +65,7 @@
         <div class="row">
             <div class="col-lg-6 py-3">
                 <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" style="height: 365px;">
-                    <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Purpose wise Default (Over Dues +
-                        NPLs)</p>
+                    <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
                     <app-pyramid-chart [item]="CreditCeiling">
                     </app-pyramid-chart>
 
