--- a/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
+++ b/src/app/modules/notification/intimate-loaner-text/intimate-loaner-text.component.html
@@ -15,6 +15,37 @@
         </div>
     </div>
 
+    <div class="mt-2">
+        <div class="col-lg-12">
+            <div class="flex" style="flex-wrap: wrap;">
+
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Name</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>
+                    </mat-form-field>
+                </div>
+
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Name</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Name" #input>
+                    </mat-form-field>
+                </div>
+
+<!--                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">-->
+
+<!--                    <button class="bg-gray-500" mat-raised-button color="primary" (click)="find()">-->
+<!--                        <mat-icon class="mr-2">search</mat-icon>-->
+<!--                        Find-->
+<!--                    </button>-->
+<!--                </div>-->
+
+            </div>
+
+
+        </div>
+    </div>
 
     <div class="mt-2">
 
@@ -35,7 +66,7 @@
                 matSortDisableClear
             >
                 <ng-container matColumnDef="GL">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >GL Code
                     </mat-header-cell
                     >
@@ -45,7 +76,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Zone">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >Zone Name
                     </mat-header-cell
                     >
@@ -55,7 +86,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Branch">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >Branch Name
                     </mat-header-cell
                     >
@@ -65,14 +96,14 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Cnic">
-                    <mat-header-cell style="min-width: 150px;" *matHeaderCellDef>CNIC</mat-header-cell>
+                    <mat-header-cell style="min-width: 150px;" *matHeaderCellDef mat-sort-header>CNIC</mat-header-cell>
                     <mat-cell style="min-width: 150px;" *matCellDef="let notification">{{
                         notification.Cnic
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Name">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >Name
                     </mat-header-cell
                     >
@@ -82,21 +113,21 @@
                 </ng-container>
 
                 <ng-container matColumnDef="FatherName">
-                    <mat-header-cell *matHeaderCellDef>Father Name</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Father Name</mat-header-cell>
                     <mat-cell *matCellDef="let notification">{{
                         notification.FatherName
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Address">
-                    <mat-header-cell *matHeaderCellDef>Address</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Address</mat-header-cell>
                     <mat-cell *matCellDef="let notification">{{
                         notification.PermanentAddress
                         }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="Sl">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >Sanction Limit
                     </mat-header-cell
                     >
@@ -116,7 +147,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Lcno">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >LC #
                     </mat-header-cell
                     >
@@ -126,7 +157,7 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Los">
-                    <mat-header-cell *matHeaderCellDef
+                    <mat-header-cell *matHeaderCellDef mat-sort-header
                     >Loan Outstanding
                     </mat-header-cell
                     >
